# TransApt

./: README.md  environment.yml  pyproject.toml
bridgeapt/: __init__.py  analysis.py  cli.py  generate.py  model.py  runner.py
bridgeapt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bridgeapt/compute/: extract_coord.py
transapt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
