[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgeapt"
version = "0.1.0"
description = "Nucleic acid sequence generation from 3D structure using GVP + Transformer"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.10",
    "biopython>=1.79",
    "pandas>=1.3",
    "numpy>=1.21",
    "scikit-learn>=1.0",
    "matplotlib>=3.5",
    "seaborn>=0.11",
    "tensorflow>=2.8,<2.16",
    "umap-learn>=0.5",
]

[project.scripts]
bridgeapt-run = "bridgeapt.cli:main"
bridgeapt-analyze = "bridgeapt.cli:analyze"

[tool.setuptools.packages.find]
where = ["."]
include = ["bridgeapt*"]

[tool.setuptools.package-data]
bridgeapt = ["weights/*.pth", "example/*.pdb", "example/*.pt", "aptshape/params.json", "aptshape/models/*"]

[project.optional-dependencies]
test = ["pytest>=7.0", "hypothesis>=6.0"]
