[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transapt"
version = "0.1.0"
description = "Nucleic acid sequence generation from 3D structure using GVP + Transformer"
requires-python = ">=3.10"
dependencies = [
    "torch>=1.10",
    "biopython>=1.79",
    "pandas>=1.3",
    "numpy>=1.21",
    "scikit-learn>=1.0",
    "matplotlib>=3.5",
    "seaborn>=0.11",
    "tensorflow>=2.8,<2.16",
    "umap-learn>=0.5",
]

[project.scripts]
transapt-run = "transapt.cli:main"
transapt-analyze = "transapt.cli:analyze"

[tool.setuptools.packages.find]
where = ["."]
include = ["transapt*"]

[tool.setuptools.package-data]
transapt = ["weights/*.pth", "example/*.pdb", "example/*.pt", "aptshape/params.json", "aptshape/models/*"]

[project.optional-dependencies]
test = ["pytest>=7.0", "hypothesis>=6.0"]
